--- a/CursoemVideo/mod_03/aula10/ex007.html
+++ b/CursoemVideo/mod_03/aula10/ex007.html
@@ -10,6 +10,7 @@
     <input type="number" name="txtn1" id="txtn1"> +
     <input type="number" name="txtn2" id="txtn2">
     <input type="button" value="somar" onclick="somar()">
+    <div id="res">Resultado: </div>
 
     <script>
         function somar(){
@@ -17,7 +18,8 @@
             tn2 = document.getElementById('txtn2')
             var n1 = Number(tn1.value)
             var n2 = Number(tn2.value)
-            sum = 
+            sum = n1 + n2
+            res.innerHTML = `A soma entre ${n1} e ${n2} é ${sum}`
         }
     </script>  
 </body>
