--- a/CursoemVideo/mod_04/exerc/ex01/index.html
+++ b/CursoemVideo/mod_04/exerc/ex01/index.html
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;</p>
+        <p>&copy; CursoemVideo</p>
     </footer>
     <script src="js/script.js"></script>
 </body>
