--- a/CursoemVideo/mod_05/aula14ex/ex02/index.html
+++ b/CursoemVideo/mod_05/aula14ex/ex02/index.html
@@ -6,17 +6,27 @@
     <title>Exercicios 1</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="carregar()">
+<body >
     <header>
-        <p>Hora do Dia</p>
+        <p>Tabuada</p>
     </header>
     <main>
         <section>
-            <div id="msg">
-                Aqui vai aperecer a mensagem
+            <div>
+                <p>
+                    Número:
+                    <input type="number" name="txtnum" id="txtnum">
+                    <button type="button" onclick="tabuada()">Gerar Tabuada</button>
+                </p>
+                <p id="res">
+                    
+                </p>
             </div>
-            <div class="foto">
-                <img id="img" src="">
+            <div>
+                <select name="tabuada" id="tabu" multiple>
+
+
+                </select>              
             </div>
         </section>
     </main>
