--- a/CursoemVideo/mod_05/aula14ex/ex02/index.html
+++ b/CursoemVideo/mod_05/aula14ex/ex02/index.html
@@ -23,7 +23,7 @@
                 </p>
             </div>
             <div>
-                <select name="tabuada" id="tabu" multiple>
+                <select name="tabuada" id="tabu" size="11">
 
 
                 </select>              
